# altocumulus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
alto/: __main__.py  util.py  womtool-30.2.jar.REMOVED.git-id
alto/commands/: __init__.py  add_method.py  create_input_stub.py  download_method.py  fc_add_method.py  fc_download_method.py  fc_inputs.py  fc_remove_method.py  fc_run.py  fc_upload.py  parse_monitoring_log.py  query.py  remove_method.py  run.py  upload.py  workspace_storage_estimate.py
alto/commands/cromwell/: __init__.py  abort.py  check_status.py  get_logs.py  get_metadata.py  get_task_status.py  list_jobs.py  run.py  timing.py
alto/commands/terra/: __init__.py  add_method.py  remove_method.py  run.py  storage_estimate.py
alto/tests/: command_tests.py  test.json  test_upload.py  test_workflow_imports.py
alto/tests/inputs/: echo.wdl
alto/utils/: __init__.py  bcl_utils.py  dockstore_utils.py  fastq_utils.py  firecloud_utils.py  io_utils.py  tar_utils.py
cumulus_util/: __main__.py  util.py
cumulus_util/commands/: __init__.py  fc_add_method.py  fc_download_method.py  fc_inputs.py  fc_remove_method.py  fc_run.py  fc_upload.py
cumulus_util/tests/: command_tests.py
cumulus_util/tests/inputs/: echo.wdl
docs/: Makefile  conf.py  index.rst  installation.rst  release_notes.rst  requirements.txt  usage.rst
sccutil/: __main__.py
sccutil/commands/: __init__.py  fc_add_method.py  fc_download_method.py  fc_inputs.py  fc_remove_method.py  fc_run.py  fc_upload.py  parse_monitoring_log.py
sccutil/tests/: command_tests.py
