[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[project]
name = 'altocumulus'
description = 'Command line utilities for workflows on Terra or Cromwell'
readme = 'README.rst'
dynamic = ['version']
dependencies = [
    "firecloud",
    "matplotlib",
    "numpy",
    "pandas",
    "python-dateutil",
    "six",
    "stratocumulus>=0.1.7"
]

[project.optional-dependencies]
test = [
    'pytest'
]

[tool.setuptools_scm]

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.docformatter]
include = '\.pyi?$'

[tool.isort]
profile = 'black'
length_sort_straight = true
line_length = 100
lines_after_imports = 2

[tool.flake8]
max-line-length = 100
include = '\.pyi?$'
ignore = [
    'E731', # Do not assign a lambda expression, use a def
    'E203', # whitespace before ':'
    'W503', # line break before binary operator ==
    'E501', # Line too long (82 > 79 characters)
    'E722', # Do not use bare except, specify exception instead
]
